--- a/index.html
+++ b/index.html
@@ -1,86 +1,100 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/src/style.css">
   <title>Home - Freelance Axis Builders</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
 
-<body class="font-sans antialiased text-gray-800">
+<body class="font-sans text-gray-800 bg-gray-50">
   <!-- Header -->
   <header class="bg-white shadow sticky top-0 z-50">
-    <div class="container mx-auto flex items-center justify-between p-4">
-      <h1 class="text-xl font-bold text-yellow-600">Freelance Axis Builders</h1>
-      <nav>
-        <a href="index.html" class="text-gray-700 hover:text-yellow-600 px-3">Home</a>
-        <a href="./src/services.html" class="text-gray-700 hover:text-yellow-600 px-3">Services</a>
-        <a href="./src/contact.html" class="text-gray-700 hover:text-yellow-600 px-3">Contact</a>
+    <div class="max-w-7xl mx-auto flex flex-col sm:flex-row items-center justify-between p-4 space-y-2 sm:space-y-0">
+      <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-yellow-600">Freelance Axis Builders</h1>
+      <nav class="w-full sm:w-auto flex justify-center sm:justify-end mt-2 sm:mt-0 space-x-4 text-sm sm:text-base">
+        <a href="/index.html" class="hover:text-yellow-600 transition">Home</a>
+        <a href="/src/services.html" class="hover:text-yellow-600 transition">Services</a>
+        <a href="/src/contact.html" class="hover:text-yellow-600 transition">Contact</a>
       </nav>
     </div>
   </header>
 
   <!-- Banner -->
-  <section class="bg-cover bg-center h-64 flex items-center justify-center"
+  <section class="relative flex items-center justify-center h-64 sm:h-72 md:h-80 bg-cover bg-center"
     style="background-image: url('https://source.unsplash.com/featured/?construction');">
-    <div class="bg-black bg-opacity-50 p-6 rounded">
-      <h2 class="text-3xl md:text-4xl text-white font-bold text-center">We Build Dreams, Brick by Brick</h2>
+    <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+    <h2 class="relative text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-white text-center px-4">
+      We Build Dreams, Brick by Brick
+    </h2>
+  </section>
+
+  <!-- About Section -->
+  <section class="max-w-4xl mx-auto px-4 py-12 text-center">
+    <h3 class="text-xl sm:text-2xl md:text-3xl font-semibold text-yellow-600 mb-4">About Us</h3>
+    <p class="text-gray-600 text-sm sm:text-base md:text-lg">
+      We are a team of professionals delivering quality construction services specializing in residential homes,
+      commercial projects, and office spaces. We ensure your dreams are delivered with precision, creativity, and
+      commitment.
+    </p>
+  </section>
+
+  <!-- Highlights -->
+  <section class="max-w-7xl mx-auto px-4 py-12">
+    <h3 class="text-xl sm:text-2xl md:text-3xl font-semibold text-center text-yellow-600 mb-8">Our Highlights</h3>
+    <div class="grid gap-6 sm:gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+      <!-- Card 1 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
+        <img src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=800" alt="Homes"
+          class="w-full h-48 object-cover" />
+        <div class="p-4 text-center">
+          <h4 class="text-lg sm:text-xl font-semibold mb-2">Homes</h4>
+          <p class="text-gray-600 text-sm sm:text-base">Crafting beautiful and functional residential spaces tailored to
+            your needs.</p>
+        </div>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
+        <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?w=800" alt="Offices"
+          class="w-full h-48 object-cover" />
+        <div class="p-4 text-center">
+          <h4 class="text-lg sm:text-xl font-semibold mb-2">Offices</h4>
+          <p class="text-gray-600 text-sm sm:text-base">Building inspiring office environments for modern businesses.
+          </p>
+        </div>
+      </div>
+      <!-- Card 3 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
+        <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?w=800" alt="Commercial Buildings"
+          class="w-full h-48 object-cover" />
+        <div class="p-4 text-center">
+          <h4 class="text-lg sm:text-xl font-semibold mb-2">Commercial Buildings</h4>
+          <p class="text-gray-600 text-sm sm:text-base">Developing commercial properties that combine functionality and
+            aesthetics.</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Introduction -->
-  <section class="container mx-auto py-12 px-4 text-center">
-    <h3 class="text-2xl font-semibold mb-4">About Freelance Axis Builders</h3>
-    <p class="max-w-2xl mx-auto text-gray-600">We are a dedicated team of professionals providing quality construction
-      services including residential homes, commercial projects, and office spaces. Our mission is to deliver your
-      dreams with precision, creativity, and commitment to excellence.</p>
-  </section>
-
-  <!-- Project Highlights -->
-  <section class="container mx-auto py-12 px-4">
-    <h3 class="text-2xl font-semibold text-center mb-8">Our Highlights</h3>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="bg-white shadow rounded p-4 text-center">
-        <img
-          src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzNjk3fDB8MHxzZWFyY2h8Mnx8bW9kZXJuJTIwaG91c2V8ZW58MHx8MHx8&ixlib=rb-4.0.3&q=80&w=800"
-          alt="Homes" class="w-full h-40 object-cover rounded mb-4">
-        <h4 class="text-xl font-bold mb-2">Homes</h4>
-        <p class="text-gray-600">Crafting beautiful and functional residential spaces tailored to your needs.</p>
-      </div>
-      <div class="bg-white shadow rounded p-4 text-center">
-        <img
-          src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzNjk3fDB8MHxzZWFyY2h8Nnx8b2ZmaWNlfGVufDB8fDB8fHwy&ixlib=rb-4.0.3&q=80&w=800"
-          alt="Offices" class="w-full h-40 object-cover rounded mb-4">
-        <h4 class="text-xl font-bold mb-2">Offices</h4>
-        <p class="text-gray-600">Building productive and inspiring office environments for modern businesses.</p>
-      </div>
-      <div class="bg-white shadow rounded p-4 text-center">
-        <img
-          src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzNjk3fDB8MHxzZWFyY2h8MXx8Y29tbWVyY2lhbCUyMGJ1aWxkaW5nfGVufDB8fDB8fHwy&ixlib=rb-4.0.3&q=80&w=800"
-          alt="Commercial Buildings" class="w-full h-40 object-cover rounded mb-4">
-        <h4 class="text-xl font-bold mb-2">Commercial Buildings</h4>
-        <p class="text-gray-600">Developing commercial properties that combine functionality and aesthetics.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Get a Quote Button -->
-  <section class="text-center py-12">
-    <a href="#" class="bg-yellow-600 text-white font-semibold px-6 py-3 rounded hover:bg-yellow-700 transition">Get a
-      Quote</a>
+  <!-- Quote Button -->
+  <section class="text-center py-8 sm:py-12">
+    <a href="/src/contact.html"
+      class="bg-yellow-600 hover:bg-yellow-700 text-white font-semibold px-6 sm:px-8 py-3 rounded-full transition duration-300">
+      Get a Quote
+    </a>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-6">
-    <div class="container mx-auto text-center">
+  <footer class="bg-gray-900 text-white py-6">
+    <div class="max-w-7xl mx-auto text-center text-xs sm:text-sm">
       <p>&copy; 2025 Freelance Axis Builders. All rights reserved.</p>
-      <div class="flex justify-center space-x-4 mt-2">
-        <a href="#" class="hover:text-yellow-500">Facebook</a>
-        <a href="#" class="hover:text-yellow-500">LinkedIn</a>
-        <a href="#" class="hover:text-yellow-500">Instagram</a>
+      <div class="flex justify-center mt-3 space-x-4">
+        <a href="#" class="hover:text-yellow-500 transition">Facebook</a>
+        <a href="#" class="hover:text-yellow-500 transition">LinkedIn</a>
+        <a href="#" class="hover:text-yellow-500 transition">Instagram</a>
       </div>
     </div>
   </footer>
