--- a/src/contact.html
+++ b/src/contact.html
@@ -1,77 +1,82 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - Freelance Axis Builders</title>
-    <link rel="stylesheet" href="/src/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Contact Us - Freelance Axis Builders</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/src/style.css" />
 </head>
 
-<body class="font-sans antialiased text-gray-800">
+<body class="font-sans text-gray-800 bg-gray-50">
     <!-- Header -->
     <header class="bg-white shadow sticky top-0 z-50">
-        <div class="container mx-auto flex items-center justify-between p-4">
-            <h1 class="text-xl font-bold text-yellow-600">Freelance Axis Builders</h1>
-            <nav>
-                <a href="/index.html" class="text-gray-700 hover:text-yellow-600 px-3">Home</a>
-                <a href="./services.html" class="text-gray-700 hover:text-yellow-600 px-3">Services</a>
-                <a href="./contact.html" class="text-gray-700 hover:text-yellow-600 px-3">Contact</a>
+        <div
+            class="max-w-7xl mx-auto flex flex-col sm:flex-row items-center justify-between p-4 space-y-2 sm:space-y-0">
+            <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-yellow-600">Freelance Axis Builders</h1>
+            <nav
+                class="w-full sm:w-auto flex justify-center sm:justify-end mt-2 sm:mt-0 space-x-4 text-sm sm:text-base">
+                <a href="/index.html" class="hover:text-yellow-600 transition">Home</a>
+                <a href="/src/services.html" class="hover:text-yellow-600 transition">Services</a>
+                <a href="/src/contact.html" class="hover:text-yellow-600 transition">Contact</a>
             </nav>
         </div>
     </header>
 
-    <!-- Contact Banner -->
-    <section class="bg-cover bg-center h-64 flex items-center justify-center"
-        style="background-image: url('https://source.unsplash.com/featured/?contact');">
-        <div class="bg-black bg-opacity-50 p-6 rounded">
-            <h2 class="text-3xl md:text-4xl text-white font-bold text-center">Contact Us</h2>
-        </div>
+    <!-- Banner -->
+    <section class="relative flex items-center justify-center h-72 bg-cover bg-center"
+        style="background-image: url('https://source.unsplash.com/featured/?contact,architecture');">
+        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <h2 class="relative text-3xl md:text-4xl lg:text-5xl font-bold text-white text-center px-4">
+            Contact Us
+        </h2>
     </section>
 
-    <!-- Contact Form -->
-    <section class="container mx-auto py-12 px-4">
-        <div class="max-w-lg mx-auto bg-white shadow rounded p-6">
-            <form>
-                <div class="mb-4">
-                    <label class="block text-gray-700">Name</label>
-                    <input type="text"
-                        class="w-full border border-gray-300 rounded px-3 py-2 mt-1 focus:outline-none focus:border-yellow-600"
-                        placeholder="Your Name">
+    <!-- Contact Section -->
+    <section class="container mx-auto px-4 py-12">
+        <h3 class="text-2xl md:text-3xl font-semibold text-center text-yellow-600 mb-8">
+            Get in Touch with Us
+        </h3>
+        <div class="max-w-lg mx-auto bg-white shadow-lg rounded-lg p-6">
+            <form action="#" method="POST" class="space-y-4">
+                <div>
+                    <label for="name" class="block text-gray-700 mb-1">Name</label>
+                    <input type="text" id="name" name="name" required placeholder="Your Name"
+                        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:border-yellow-600" />
                 </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700">Email</label>
-                    <input type="email"
-                        class="w-full border border-gray-300 rounded px-3 py-2 mt-1 focus:outline-none focus:border-yellow-600"
-                        placeholder="you@example.com">
+                <div>
+                    <label for="email" class="block text-gray-700 mb-1">Email</label>
+                    <input type="email" id="email" name="email" required placeholder="you@example.com"
+                        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:border-yellow-600" />
                 </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700">Phone</label>
-                    <input type="tel"
-                        class="w-full border border-gray-300 rounded px-3 py-2 mt-1 focus:outline-none focus:border-yellow-600"
-                        placeholder="Your Phone Number">
+                <div>
+                    <label for="phone" class="block text-gray-700 mb-1">Phone</label>
+                    <input type="tel" id="phone" name="phone" required placeholder="Your Phone Number"
+                        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:border-yellow-600" />
                 </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700">Message</label>
-                    <textarea
-                        class="w-full border border-gray-300 rounded px-3 py-2 mt-1 focus:outline-none focus:border-yellow-600"
-                        rows="4" placeholder="Your Message"></textarea>
+                <div>
+                    <label for="message" class="block text-gray-700 mb-1">Message</label>
+                    <textarea id="message" name="message" rows="4" required placeholder="Your Message"
+                        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:border-yellow-600"></textarea>
                 </div>
                 <button type="submit"
-                    class="bg-yellow-600 text-white font-semibold px-6 py-2 rounded hover:bg-yellow-700 transition">Send
-                    Message</button>
+                    class="w-full bg-yellow-600 hover:bg-yellow-700 text-white font-semibold px-6 py-2 rounded-full transition">
+                    Send Message
+                </button>
             </form>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto text-center">
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="container mx-auto text-center text-sm">
             <p>&copy; 2025 Freelance Axis Builders. All rights reserved.</p>
-            <div class="flex justify-center space-x-4 mt-2">
-                <a href="#" class="hover:text-yellow-500">Facebook</a>
-                <a href="#" class="hover:text-yellow-500">LinkedIn</a>
-                <a href="#" class="hover:text-yellow-500">Instagram</a>
+            <div class="flex justify-center mt-3 space-x-4">
+                <a href="#" class="hover:text-yellow-500 transition">Facebook</a>
+                <a href="#" class="hover:text-yellow-500 transition">LinkedIn</a>
+                <a href="#" class="hover:text-yellow-500 transition">Instagram</a>
             </div>
         </div>
     </footer>
