--- a/src/services.html
+++ b/src/services.html
@@ -1,75 +1,95 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services - Freelance Axis Builders</title>
-    <link rel="stylesheet" href="/src/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/src/style.css" />
 </head>
 
-<body class="font-sans antialiased text-gray-800">
+<body class="font-sans text-gray-800 bg-gray-50">
     <!-- Header -->
     <header class="bg-white shadow sticky top-0 z-50">
-        <div class="container mx-auto flex items-center justify-between p-4">
-            <h1 class="text-xl font-bold text-yellow-600">Freelance Axis Builders</h1>
-            <nav>
-                <a href="/index.html" class="text-gray-700 hover:text-yellow-600 px-3">Home</a>
-                <a href="/src/services.html" class="text-gray-700 hover:text-yellow-600 px-3">Services</a>
-                <a href="/src/contact.html" class="text-gray-700 hover:text-yellow-600 px-3">Contact</a>
+        <div
+            class="max-w-7xl mx-auto flex flex-col sm:flex-row items-center justify-between p-4 space-y-2 sm:space-y-0">
+            <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-yellow-600">Freelance Axis Builders</h1>
+            <nav
+                class="w-full sm:w-auto flex justify-center sm:justify-end mt-2 sm:mt-0 space-x-4 text-sm sm:text-base">
+                <a href="/index.html" class="hover:text-yellow-600 transition">Home</a>
+                <a href="/src/services.html" class="hover:text-yellow-600 transition">Services</a>
+                <a href="/src/contact.html" class="hover:text-yellow-600 transition">Contact</a>
             </nav>
         </div>
     </header>
 
-    <!-- Services Banner -->
-    <section class="bg-cover bg-center h-64 flex items-center justify-center"
-        style="background-image: url('https://source.unsplash.com/featured/?architecture');">
-        <div class="bg-black bg-opacity-50 p-6 rounded">
-            <h2 class="text-3xl md:text-4xl text-white font-bold text-center">Our Services</h2>
-        </div>
+    <!-- Banner -->
+    <section class="relative flex items-center justify-center h-72 bg-cover bg-center"
+        style="background-image: url('https://source.unsplash.com/featured/?architecture,building');">
+        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <h2 class="relative text-3xl md:text-4xl lg:text-5xl font-bold text-white text-center px-4">
+            Our Services
+        </h2>
     </section>
 
-    <!-- Services List -->
-    <section class="container mx-auto py-12 px-4">
-        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-            <div class="bg-white shadow rounded p-4 text-center">
-                <!-- <img src="https://source.unsplash.com/featured/?residential" alt="Residential Construction" class="w-full h-40 object-cover rounded mb-4"> -->
-                <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                    alt="Residential Construction" class="w-full h-40 object-cover rounded mb-4">
-                <h4 class="text-xl font-bold mb-2">Residential Construction</h4>
-                <p class="text-gray-600">Quality homes built with care and attention to detail for your family.</p>
+    <!-- Services Section -->
+    <section class="container mx-auto px-4 py-12">
+        <h3 class="text-2xl md:text-3xl font-semibold text-center text-yellow-600 mb-10">
+            What We Offer
+        </h3>
+        <div class="grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
+            <!-- Service Card -->
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+                <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?w=800"
+                    alt="Residential Construction" class="w-full h-48 object-cover" />
+                <div class="p-4 text-center">
+                    <h4 class="text-xl font-semibold mb-2">Residential Construction</h4>
+                    <p class="text-gray-600">Quality homes built with care and attention to detail for your family.</p>
+                </div>
             </div>
-            <div class="bg-white shadow rounded p-4 text-center">
-                <!-- <img src="https://images.unsplash.com/photo-1589983846997-4e1ecf94b70f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Commercial Projects" class="w-full h-40 object-cover rounded mb-4"> -->
-                <img src="https://images.pexels.com/photos/323705/pexels-photo-323705.jpeg?auto=compress&cs=tinysrgb&w=800"
-                    alt="Commercial Projects" class="w-full h-40 object-cover rounded mb-4">
 
-                <h4 class="text-xl font-bold mb-2">Commercial Projects</h4>
-                <p class="text-gray-600">Developing commercial spaces that blend aesthetics with functionality.</p>
+            <!-- Service Card -->
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+                <img src="https://images.pexels.com/photos/323705/pexels-photo-323705.jpeg?w=800"
+                    alt="Commercial Projects" class="w-full h-48 object-cover" />
+                <div class="p-4 text-center">
+                    <h4 class="text-xl font-semibold mb-2">Commercial Projects</h4>
+                    <p class="text-gray-600">Developing commercial spaces blending aesthetics with functionality.</p>
+                </div>
             </div>
-            <div class="bg-white shadow rounded p-4 text-center">
-                <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                    alt="Renovations & Remodeling" class="w-full h-40 object-cover rounded mb-4">
-                <h4 class="text-xl font-bold mb-2">Renovations & Remodeling</h4>
-                <p class="text-gray-600">Transforming spaces to match your evolving needs with style and efficiency.</p>
+
+            <!-- Service Card -->
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+                <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?w=800"
+                    alt="Renovations & Remodeling" class="w-full h-48 object-cover" />
+                <div class="p-4 text-center">
+                    <h4 class="text-xl font-semibold mb-2">Renovations & Remodeling</h4>
+                    <p class="text-gray-600">Transforming spaces to match your evolving needs efficiently.</p>
+                </div>
             </div>
-            <div class="bg-white shadow rounded p-4 text-center">
-                <img src="https://images.pexels.com/photos/442579/pexels-photo-442579.jpeg?auto=compress&cs=tinysrgb&w=800"
-                    alt="Architecture & Design" class="w-full h-40 object-cover rounded mb-4">
-                <h4 class="text-xl font-bold mb-2">Architecture & Design</h4>
-                <p class="text-gray-600">Creative and practical design solutions tailored to your vision.</p>
+
+            <!-- Service Card -->
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+                <img src="https://images.pexels.com/photos/442579/pexels-photo-442579.jpeg?w=800"
+                    alt="Architecture & Design" class="w-full h-48 object-cover" />
+                <div class="p-4 text-center">
+                    <h4 class="text-xl font-semibold mb-2">Architecture & Design</h4>
+                    <p class="text-gray-600">Creative, practical design solutions aligned with your vision.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="container mx-auto text-center">
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="container mx-auto text-center text-sm">
             <p>&copy; 2025 Freelance Axis Builders. All rights reserved.</p>
-            <div class="flex justify-center space-x-4 mt-2">
-                <a href="#" class="hover:text-yellow-500">Facebook</a>
-                <a href="#" class="hover:text-yellow-500">LinkedIn</a>
-                <a href="#" class="hover:text-yellow-500">Instagram</a>
+            <div class="flex justify-center mt-3 space-x-4">
+                <a href="#" class="hover:text-yellow-500 transition">Facebook</a>
+                <a href="#" class="hover:text-yellow-500 transition">LinkedIn</a>
+                <a href="#" class="hover:text-yellow-500 transition">Instagram</a>
             </div>
         </div>
     </footer>
