--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <h1 class="text-lg sm:text-xl md:text-2xl font-bold text-yellow-600">Freelance Axis Builders</h1>
       <nav class="w-full sm:w-auto flex justify-center sm:justify-end mt-2 sm:mt-0 space-x-4 text-sm sm:text-base">
         <a href="/index.html" class="hover:text-yellow-600 transition">Home</a>
-        <a href="/src/services.html" class="hover:text-yellow-600 transition">Services</a>
-        <a href="/src/contact.html" class="hover:text-yellow-600 transition">Contact</a>
+        <a href="/services.html" class="hover:text-yellow-600 transition">Services</a>
+        <a href="/contact.html" class="hover:text-yellow-600 transition">Contact</a>
       </nav>
     </div>
   </header>
