--- a/services.html
+++ b/services.html
@@ -19,8 +19,8 @@
             <nav
                 class="w-full sm:w-auto flex justify-center sm:justify-end mt-2 sm:mt-0 space-x-4 text-sm sm:text-base">
                 <a href="/index.html" class="hover:text-yellow-600 transition">Home</a>
-                <a href="/src/services.html" class="hover:text-yellow-600 transition">Services</a>
-                <a href="/src/contact.html" class="hover:text-yellow-600 transition">Contact</a>
+                <a href="/services.html" class="hover:text-yellow-600 transition">Services</a>
+                <a href="/contact.html" class="hover:text-yellow-600 transition">Contact</a>
             </nav>
         </div>
     </header>
