improve UI on home and services pages

--- a/services.html
+++ b/services.html
@@ -35,52 +35,60 @@
     </section>
 
     <!-- Services Section -->
-    <section class="container mx-auto px-4 py-12">
-        <h3 class="text-2xl md:text-3xl font-semibold text-center text-yellow-600 mb-10">
-            What We Offer
-        </h3>
-        <div class="grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
-            <!-- Service Card -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+    <section class="max-w-7xl mx-auto px-4 py-16">
+        <h3 class="text-2xl sm:text-3xl font-semibold text-center text-yellow-600 mb-12">What We Offer</h3>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+
+            <!-- Residential Construction -->
+            <div
+                class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
                 <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?w=800"
-                    alt="Residential Construction" class="w-full h-48 object-cover" />
-                <div class="p-4 text-center">
-                    <h4 class="text-xl font-semibold mb-2">Residential Construction</h4>
-                    <p class="text-gray-600">Quality homes built with care and attention to detail for your family.</p>
+                    alt="Residential Construction" class="w-full h-56 object-cover">
+                <div class="p-6 text-center">
+                    <h4 class="text-lg font-semibold mb-2">Residential Construction</h4>
+                    <p class="text-gray-600 text-sm">Quality homes built with care and attention to detail for your
+                        family.</p>
                 </div>
             </div>
 
-            <!-- Service Card -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+            <!-- Commercial Projects -->
+            <div
+                class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
                 <img src="https://images.pexels.com/photos/323705/pexels-photo-323705.jpeg?w=800"
-                    alt="Commercial Projects" class="w-full h-48 object-cover" />
-                <div class="p-4 text-center">
-                    <h4 class="text-xl font-semibold mb-2">Commercial Projects</h4>
-                    <p class="text-gray-600">Developing commercial spaces blending aesthetics with functionality.</p>
+                    alt="Commercial Projects" class="w-full h-56 object-cover">
+                <div class="p-6 text-center">
+                    <h4 class="text-lg font-semibold mb-2">Commercial Projects</h4>
+                    <p class="text-gray-600 text-sm">Developing commercial spaces blending aesthetics with
+                        functionality.</p>
                 </div>
             </div>
 
-            <!-- Service Card -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+            <!-- Renovations & Remodeling -->
+            <div
+                class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
                 <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be?w=800"
-                    alt="Renovations & Remodeling" class="w-full h-48 object-cover" />
-                <div class="p-4 text-center">
-                    <h4 class="text-xl font-semibold mb-2">Renovations & Remodeling</h4>
-                    <p class="text-gray-600">Transforming spaces to match your evolving needs efficiently.</p>
+                    alt="Renovations & Remodeling" class="w-full h-56 object-cover">
+                <div class="p-6 text-center">
+                    <h4 class="text-lg font-semibold mb-2">Renovations & Remodeling</h4>
+                    <p class="text-gray-600 text-sm">Transforming spaces to match your evolving needs efficiently.</p>
                 </div>
             </div>
 
-            <!-- Service Card -->
-            <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:scale-105 transition-transform">
+            <!-- Architecture & Design -->
+            <div
+                class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
                 <img src="https://images.pexels.com/photos/442579/pexels-photo-442579.jpeg?w=800"
-                    alt="Architecture & Design" class="w-full h-48 object-cover" />
-                <div class="p-4 text-center">
-                    <h4 class="text-xl font-semibold mb-2">Architecture & Design</h4>
-                    <p class="text-gray-600">Creative, practical design solutions aligned with your vision.</p>
+                    alt="Architecture & Design" class="w-full h-56 object-cover">
+                <div class="p-6 text-center">
+                    <h4 class="text-lg font-semibold mb-2">Architecture & Design</h4>
+                    <p class="text-gray-600 text-sm">Creative, practical design solutions aligned with your vision.</p>
                 </div>
             </div>
+
         </div>
     </section>
+
+
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-6 mt-12">
