--- a/index.html
+++ b/index.html
@@ -43,37 +43,37 @@
   </section>
 
   <!-- Highlights -->
-  <section class="max-w-7xl mx-auto px-4 py-12">
-    <h3 class="text-xl sm:text-2xl md:text-3xl font-semibold text-center text-yellow-600 mb-8">Our Highlights</h3>
-    <div class="grid gap-6 sm:gap-8 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-      <!-- Card 1 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
+  <section class="max-w-7xl mx-auto px-4 py-16">
+    <h3 class="text-2xl sm:text-3xl font-semibold text-center text-yellow-600 mb-12">Our Highlights</h3>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <!-- Card -->
+      <div
+        class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
         <img src="https://images.unsplash.com/photo-1568605117036-5fe5e7bab0b7?w=800" alt="Homes"
-          class="w-full h-48 object-cover" />
-        <div class="p-4 text-center">
-          <h4 class="text-lg sm:text-xl font-semibold mb-2">Homes</h4>
-          <p class="text-gray-600 text-sm sm:text-base">Crafting beautiful and functional residential spaces tailored to
-            your needs.</p>
+          class="w-full h-56 object-cover" />
+        <div class="p-6 text-center">
+          <h4 class="text-lg font-semibold mb-2">Homes</h4>
+          <p class="text-gray-600 text-sm">Beautiful, functional residential spaces tailored to your lifestyle.</p>
         </div>
       </div>
-      <!-- Card 2 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
+
+      <div
+        class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
         <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?w=800" alt="Offices"
-          class="w-full h-48 object-cover" />
-        <div class="p-4 text-center">
-          <h4 class="text-lg sm:text-xl font-semibold mb-2">Offices</h4>
-          <p class="text-gray-600 text-sm sm:text-base">Building inspiring office environments for modern businesses.
-          </p>
+          class="w-full h-56 object-cover" />
+        <div class="p-6 text-center">
+          <h4 class="text-lg font-semibold mb-2">Offices</h4>
+          <p class="text-gray-600 text-sm">Inspiring office environments for modern businesses.</p>
         </div>
       </div>
-      <!-- Card 3 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden transform hover:scale-105 transition duration-300">
-        <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?w=800" alt="Commercial Buildings"
-          class="w-full h-48 object-cover" />
-        <div class="p-4 text-center">
-          <h4 class="text-lg sm:text-xl font-semibold mb-2">Commercial Buildings</h4>
-          <p class="text-gray-600 text-sm sm:text-base">Developing commercial properties that combine functionality and
-            aesthetics.</p>
+
+      <div
+        class="bg-white shadow-md rounded-2xl overflow-hidden transform hover:scale-105 hover:shadow-xl transition duration-300">
+        <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?w=800" alt="Commercial"
+          class="w-full h-56 object-cover" />
+        <div class="p-6 text-center">
+          <h4 class="text-lg font-semibold mb-2">Commercial Buildings</h4>
+          <p class="text-gray-600 text-sm">Commercial properties combining functionality and aesthetics.</p>
         </div>
       </div>
     </div>
